[package]
name = "carrot_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.29.1", features = ["full"] }
carrot_sdk = { git = "https://github.com/xeynyty/carrot_sdk" }
anyhow = "1.0.72"
derive_more = "0.99.17"
async-trait = "0.1.71"

[profile.release]
lto = true
